--- a/Cal-Eve.html
+++ b/Cal-Eve.html
@@ -3,106 +3,379 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eventos Cercanos</title>
-    <link rel="stylesheet" href="stylecaleve.css">
+    <title>Cal-Eve</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fff3e0;
+            margin: 0;
+            padding: 0;
+            transition: background-color 0.5s, color 0.5s;
+        }
+
+        .container {
+            width: 60%;
+            margin: 20px auto;
+            padding: 20px;
+            background: linear-gradient(135deg, #ff9800, #ff5722);
+            border-radius: 15px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            color: white;
+            text-align: center;
+        }
+
+        .evento {
+            background: #fff;
+            padding: 15px;
+            border-radius: 10px;
+            margin-top: 15px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            color: black;
+            text-align: left;
+            animation: fadeIn 0.5s ease-in-out;
+            position: relative;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        button {
+            margin: 5px;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: transform 0.2s, background 0.3s;
+        }
+
+        .asistire {
+            background: #4caf50;
+            color: white;
+        }
+
+        .asistire:hover {
+            background: #388e3c;
+            transform: scale(1.1);
+        }
+
+        .noasistire {
+            background: #f44336;
+            color: white;
+        }
+
+        .noasistire:hover {
+            background: #d32f2f;
+            transform: scale(1.1);
+        }
+
+        .publicar {
+            background: #ffcc80;
+            color: black;
+            font-weight: bold;
+            display: block;
+            margin: 10px auto;
+        }
+
+        .confirmacion {
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        input,
+        textarea,
+        select {
+            width: 90%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: none;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .file-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        .file-button {
+            background: #ffcc80;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            display: inline-block;
+        }
+
+        .comentarios-container {
+            margin-top: 15px;
+        }
+
+        .comentarios {
+            margin-top: 10px;
+            border-top: 1px solid #ddd;
+            padding-top: 10px;
+        }
+
+        .comentarios p {
+            background: #f5f5f5;
+            padding: 8px;
+            border-radius: 5px;
+            margin: 5px 0;
+            display: flex;
+            align-items: center;
+        }
+
+        .comentarios i {
+            margin-right: 8px;
+            color: #ff9800;
+        }
+
+        .comentario-input {
+            width: 85%;
+            margin-right: 5px;
+        }
+
+        .galeria {
+            display: flex;
+            overflow-x: auto;
+            margin-top: 10px;
+        }
+
+        .galeria img {
+            width: 100px;
+            height: 100px;
+            margin-right: 10px;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+        .acciones {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        #modo-oscuro {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: #555;
+            color: white;
+            padding: 10px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .toast {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #4caf50;
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.5s;
+        }
+
+        body.dark {
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Eventos Cercanos</h1>
-    </header>
-    <main>
-        <div class="eventos">
-            <div class="evento">
-                <h2>Concierto Guns N' Roses</h2>
-                <p>Fecha: 15 de marzo de 2025</p>
-                <p>Lugar: Arena Monterrey</p>
-                <p>Descripción: ¡No te pierdas el mejor concierto de rock del año!</p>
-                <button>Asistir</button>
-            </div>
-            <div class="evento">
-                <h2>Feria del Libro</h2>
-                <p>Fecha: 20 de abril de 2024</p>
-                <p>Lugar: Centro Cultural Elena Garro</p>
-                <p>Descripción: Encuentra los mejores libros y conoce a tus autores favoritos.</p>
-                <button>Asistir</button>
-            </div>
-            <div class="evento">
-                <h2>Clase de Yoga</h2>
-                <p>Fecha: Todos los sábados</p>
-                <p>Lugar: Parque México</p>
-                <p>Descripción: Relájate y encuentra tu equilibrio con nuestra clase de yoga al aire libre.</p>
-                <button>Asistir</button>
-            </div>
+    <div style="text-align: center; background: linear-gradient(135deg, #ff9800, #ff5722); padding: 20px; color: white; font-size: 2rem; font-weight: bold; border-bottom: 5px solid #ff5722;">
+        🎉 Bienvenido a <span style="color: #ffeb3b;">Cal-Eve</span> 🎊
+    </div>
+    <div class="container">
+        <h2>📅 Publicar un Evento</h2>
+        <input type="text" id="titulo" placeholder="Título del evento">
+        <textarea id="descripcion" placeholder="Descripción"></textarea>
+        <select id="categoria">
+            <option value="sociales">🎭 Eventos Sociales</option>
+            <option value="conciertos">🎧 Conciertos</option>
+            <option value="clases">🎓 Clases / Conferencias</option>
+            <option value="deportes">⚽️ Deportes</option>
+            <option value="videojuegos">🎮 Torneos de Videojuegos</option>
+        </select>
+        <input type="datetime-local" id="fecha" placeholder="Fecha y Hora del evento">
+        <div class="file-container">
+            <label class="file-button" for="imagen">📂 Seleccionar imagen(es)</label>
+            <input type="file" id="imagen" multiple style="display: none;" onchange="actualizarNombreArchivo()">
+            <span id="file-label">Ningún archivo seleccionado</span>
         </div>
-        <aside class="crear-evento">
-            <h2>Crea un evento en Cal-Eve</h2>
-            <button id="showFormBtn">Publicar evento</button>
-
-    <div id="eventForm">
-        <h1></h1>
-        <input type="text" id="title" placeholder="Título del evento"><br>
-        <input type="datetime-local" id="date"><br>
-        <input type="text" id="location" placeholder="Ubicación"><br>
-        <textarea id="description" placeholder="Descripción"></textarea><br>
-        <button id="submitBtn">Publicar</button>
-        <button id="cancelBtn">Cancelar</button>
+        <button class="publicar" onclick="publicarEvento()">📢 Publicar</button>
+    </div>
+    <div class="container" id="eventos">
+        <h2>🎉 Eventos Publicados</h2>
     </div>
 
-    <div id="events">
-        </div>
+    <i id="modo-oscuro" class="fas fa-moon" onclick="toggleModoOscuro()"></i>
 
-    <div id="map"></div> <script>
-        const showFormBtn = document.getElementById('showFormBtn');
-        const eventForm = document.getElementById('eventForm');
-        const submitBtn = document.getElementById('submitBtn');
-        const cancelBtn = document.getElementById('cancelBtn');
-        const eventsDiv = document.getElementById('events');
-        let events = []; 
+    <div id="toast" class="toast"></div>
 
-        showFormBtn.addEventListener('click', () => {
-            eventForm.style.display = 'block';
-            showFormBtn.style.display = 'none';
-        });
+    <script>
+        let contadorAsistentes = {};
+        let modoOscuro = false;
 
-        cancelBtn.addEventListener('click', () => {
-            eventForm.style.display = 'none';
-            showFormBtn.style.display = 'block';
-        });
+        function actualizarNombreArchivo() {
+            let inputFile = document.getElementById("imagen");
+            let fileLabel = document.getElementById("file-label");
+            if (inputFile.files.length > 0) {
+                fileLabel.textContent = `${inputFile.files.length} archivo(s) seleccionado(s)`;
+            } else {
+                fileLabel.textContent = "Ningún archivo seleccionado";
+            }
+        }
 
-        submitBtn.addEventListener('click', () => {
-            const title = document.getElementById('title').value;
-            const date = document.getElementById('date').value;
-            const location = document.getElementById('location').value;
-            const description = document.getElementById('description').value;
+        function publicarEvento() {
+            let titulo = document.getElementById("titulo").value;
+            let descripcion = document.getElementById("descripcion").value;
+            let fecha = document.getElementById("fecha").value;
+            let categoria = document.getElementById("categoria").value;
+            let imagenes = document.getElementById("imagen").files;
 
-            const newEvent = { title, date, location, description };
-            events.push(newEvent);
-            displayEvents();
-            eventForm.style.display = 'none';
-            showFormBtn.style.display = 'block';
-            
-            document.getElementById('title').value = "";
-            document.getElementById('date').value = "";
-            document.getElementById('location').value = "";
-            document.getElementById('description').value = "";
-        });
+            if (!titulo || !descripcion || !fecha) {
+                alert("Por favor, completa todos los campos.");
+                return;
+            }
 
-        function displayEvents() {
-            eventsDiv.innerHTML = ''; 
-            events.forEach(event => {
-                const eventDiv = document.createElement('div');
-                eventDiv.classList.add('event');
-                eventDiv.innerHTML = `
-                    <h3>${event.title}</h3>
-                    <p>Fecha: ${event.date}</p>
-                    <p>Ubicación: ${event.location}</p>
-                    <p>${event.description}</p>
-                `;
-                eventsDiv.appendChild(eventDiv);
-            });
+            let iconoCategoria = obtenerIconoCategoria(categoria);
+
+            let evento = document.createElement("div");
+            evento.className = "evento";
+            evento.innerHTML = `
+                <div class="acciones">
+                    <button onclick="editarEvento(this)"><i class="fas fa-edit"></i></button>
+                    <button onclick="eliminarEvento(this)"><i class="fas fa-trash"></i></button>
+                </div>
+                <h3>${iconoCategoria} ${titulo}</h3>
+                <p>${descripcion}</p>
+                <p><strong>📅 Fecha y Hora:</strong> ${fecha}</p>
+                <div class="galeria">${mostrarGaleria(imagenes)}</div>
+                <div class="comentarios-container">
+                    <h4>💬 Comentarios</h4>
+                    <input type="text" class="comentario-input" id="comentario-${titulo.replace(/\s/g, '')}" placeholder="Escribe un comentario...">
+                    <button onclick="agregarComentario('${titulo.replace(/\s/g, '')}')">➕ Comentar</button>
+                    <div class="comentarios" id="comentarios-${titulo.replace(/\s/g, '')}"></div>
+                </div>
+                <button class="asistire" onclick="confirmarAsistencia('${titulo.replace(/\s/g, '')}', true)">✅ Asistiré</button>
+                <button class="noasistire" onclick="confirmarAsistencia('${titulo.replace(/\s/g, '')}', false)">❌ No Asistiré</button>
+                <div class="confirmacion" id="confirmacion-${titulo.replace(/\s/g, '')}"></div>
+                <p><strong>👥 Asistencias:</strong> <span id="contador-${titulo.replace(/\s/g, '')}">0</span></p>
+            `;
+
+            document.getElementById("eventos").appendChild(evento);
+            contadorAsistentes[titulo.replace(/\s/g, '')] = 0;
+        }
+
+        function obtenerIconoCategoria(categoria) {
+            let iconos = {
+                "sociales": "🎭",
+                "conciertos": "🎧",
+                "clases": "🎓",
+                "deportes": "⚽️",
+                "videojuegos": "🎮"
+            };
+            return iconos[categoria] || "📅";
+        }
+
+        function mostrarGaleria(imagenes) {
+            let galeriaHTML = "";
+            for (let i = 0; i < imagenes.length; i++) {
+                let imgURL = URL.createObjectURL(imagenes[i]);
+                galeriaHTML += `<img src="${imgURL}" onclick="abrirImagen('${imgURL}')">`;
+            }
+            return galeriaHTML;
+        }
+
+        function abrirImagen(url) {
+            window.open(url, "_blank");
+        }
+
+        function confirmarAsistencia(eventoId, asistira) {
+            let confirmacionDiv = document.getElementById(`confirmacion-${eventoId}`);
+            let contador = document.getElementById(`contador-${eventoId}`);
+
+            if (asistira) {
+                confirmacionDiv.innerHTML = "✅ Confirmaste tu asistencia. ¡Nos vemos allí!";
+                contadorAsistentes[eventoId]++;
+            } else {
+                confirmacionDiv.innerHTML = "❌ No asistirás a este evento.";
+            }
+
+            contador.innerHTML = contadorAsistentes[eventoId];
+            mostrarToast(asistira ? "¡Asistencia confirmada!" : "Has cancelado tu asistencia.");
+        }
+
+        function agregarComentario(eventoId) {
+            let comentarioInput = document.getElementById(`comentario-${eventoId}`);
+            let comentariosDiv = document.getElementById(`comentarios-${eventoId}`);
+
+            if (comentarioInput.value.trim() === "") {
+                alert("El comentario no puede estar vacío.");
+                return;
+            }
+
+            let nuevoComentario = document.createElement("p");
+            nuevoComentario.innerHTML = `<i class="fas fa-comment"></i> ${comentarioInput.value}`;
+            comentariosDiv.appendChild(nuevoComentario);
+
+            comentarioInput.value = "";
+        }
+
+        function editarEvento(boton) {
+    let evento = boton.parentElement.parentElement;
+    let titulo = evento.querySelector('h3');
+    let descripcion = evento.querySelector('p:nth-of-type(1)');
+    let fecha = evento.querySelector('p:nth-of-type(2)');
+
+    // Extraer valores actuales
+    let nuevoTitulo = prompt('Editar título:', titulo.textContent.replace(/^[^\s]+\s/, ''));
+    let nuevaDescripcion = prompt('Editar descripción:', descripcion.textContent);
+    let nuevaFecha = prompt('Editar fecha y hora (AAAA-MM-DDTHH:MM):', fecha.textContent.replace('📅 Fecha y Hora: ', ''));
+
+    if (nuevoTitulo !== null && nuevaDescripcion !== null && nuevaFecha !== null) {
+        titulo.innerHTML = titulo.innerHTML.replace(/^[^\s]+/, '') + ' ' + nuevoTitulo;
+        descripcion.textContent = nuevaDescripcion;
+        fecha.innerHTML = '<strong>📅 Fecha y Hora:</strong> ' + nuevaFecha;
+        mostrarToast('✅ Evento actualizado con éxito');
+    } else {
+        mostrarToast('❌ Edición cancelada');
+    }
+}
+
+
+        function eliminarEvento(boton) {
+            let evento = boton.parentElement.parentElement;
+            evento.remove();
+        }
+
+        function toggleModoOscuro() {
+            document.body.classList.toggle("dark");
+            modoOscuro = !modoOscuro;
+            let icono = document.getElementById("modo-oscuro");
+            icono.classList.toggle("fa-sun");
+            icono.classList.toggle("fa-moon");
+        }
+
+        function mostrarToast(mensaje) {
+            let toast = document.getElementById("toast");
+            toast.innerHTML = mensaje;
+            toast.style.opacity = "1";
+            setTimeout(() => {
+                toast.style.opacity = "0";
+            }, 3000);
         }
     </script>
-        </aside>
-    </main>
 </body>
 </html>
